# OpenGL

./: CMakeLists.txt
res/shaders/: BasicFragment.shader  BasicVertex.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  VeryexBufferyLayout.cpp  main.cpp
